# simd-json-derive

./: .gitignore  Cargo.toml  README.md  test.rs
.cargo/: config.toml
.github/workflows/: create-release-tag.yaml  draft-new-release.yaml  nightly.yml  publish-crates.yaml  publish-release.yaml  quality.yaml  tests.yml
benches/: mesh.rs  value.rs
examples/: enum1.rs  person.rs  untagged.rs
simd-json-derive-int/: Cargo.toml
simd-json-derive-int/src/: args.rs  deserialize.rs  lib.rs  serialize.rs
simd-json-derive-int/src/deserialize/: enum.rs  struct.rs
simd-json-derive-int/src/deserialize/struct/: named.rs  unnamed.rs
simd-json-derive-int/src/serialize/: enum.rs  struct.rs
simd-json-derive-int/src/serialize/struct/: named.rs  unnamed.rs
src/: de.rs  impls.rs  lib.rs
src/impls/: abi_stable.rs  array.rs  chrono.rs  collections.rs  deref.rs  primitives.rs  simdjson.rs  string.rs  tpl.rs
tests/: attrs.rs  bench_structs.rs  deser.rs  enum.rs  rename.rs  simdjson.rs  simple.rs  skip_serializing_if.rs  struct.rs  unknown_fields.rs
