[package]
name = "simd-json-derive"
version = "0.3.0"
authors = ["Heinz N. Gies <heinz@licenser.net>"]
edition = "2021"
license = "Apache-2.0/MIT"
description = "derives for simd-json"
documentation = "https://docs.rs/simd-json-derive"
readme = "README.md"
homepage = "https://docs.rs/simd-json-derive"
repository = "https://github.com/simd-lite/simd-json-derive/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simd-json-derive-int = { path = "./simd-json-derive-int", version = "0.3.0" }
value-trait = "0.2"
itoa = "0.4"
ryu = "1"
chrono = { version = "0.4", optional = true }
abi_stable = { version = "0.10", optional = true, default-features = false }
simd-json = '0.5'

[dev-dependencies]
serde_json = "1"
serde = "1"

[patch.crates-io]
# FIXME: update to crates.io when this is added to a new version:
# https://github.com/rodrimati1992/abi_stable_crates/pull/80
abi_stable = { git = "https://github.com/rodrimati1992/abi_stable_crates.git", branch = "0_11" }

[features]
default = ["impl-chrono"]
impl-chrono = ["chrono"]
impl-abi_stable = ["abi_stable"]
