[package]
name = "simd-json-derive"
version = "0.9.2"
authors = ["Heinz N. Gies <heinz@licenser.net>"]
edition = "2021"
license = "Apache-2.0/MIT"
description = "derives for simd-json"
documentation = "https://docs.rs/simd-json-derive"
readme = "README.md"
homepage = "https://docs.rs/simd-json-derive"
repository = "https://github.com/simd-lite/simd-json-derive/"
rust-version = "1.61"

[profile.bench]
debug = 2

[workspace]
members = ["simd-json-derive-int"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simd-json-derive-int = { path = "./simd-json-derive-int", version = "0.9.1" }
value-trait = "0.6"
itoa = "1"
ryu = "1"
chrono = { version = "0.4", optional = true }
simd-json = '0.10.2'

[dev-dependencies]
serde_json = "1"
serde = "1"
criterion = "0.5"
rand = "0.8"


[features]
default = ["impl-chrono"]
impl-chrono = ["chrono"]
128bit = ["simd-json-derive-int/128bit", "simd-json/128bit"]
allow-non-simd = [
    "simd-json-derive-int/allow-non-simd",
    "simd-json/allow-non-simd",
]

[package.metadata.docs.rs]
features = ["allow-non-simd"]

[[example]]
name = "enum1"

[[bench]]
name = "value"
harness = false

[[bench]]
name = "mesh"
harness = false
