[package]
name = "simd-json-derive"
version = "0.15.0"
authors = ["Heinz N. Gies <heinz@licenser.net>"]
edition = "2021"
license = "Apache-2.0/MIT"
description = "derives for simd-json"
documentation = "https://docs.rs/simd-json-derive"
readme = "README.md"
homepage = "https://docs.rs/simd-json-derive"
repository = "https://github.com/simd-lite/simd-json-derive/"
rust-version = "1.80"

[profile.bench]
debug = 2

[workspace]
members = ["simd-json-derive-int"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simd-json-derive-int = { path = "./simd-json-derive-int", version = "0.15.0" }
value-trait = { version = "0.10.0" }
itoa = "1"
ryu = "1"
chrono = { version = "0.4", optional = true }
simd-json = { version = "0.14.0" }
heap-array = { version = "0.1.1", optional = true }
thiserror = "2.0.6"

[dev-dependencies]
serde_json = "1"
serde = "1"
criterion = "0.5"
rand = "0.8"


[features]
default = ["impl-chrono"]
impl-chrono = ["chrono"]
128bit = ["simd-json-derive-int/128bit", "simd-json/128bit"]
heap-array = ["dep:heap-array"]


[[example]]
name = "enum1"

[[example]]
name = "untagged"

[[example]]
name = "person"


[[bench]]
name = "value"
harness = false

[[bench]]
name = "mesh"
harness = false
