[package]
name = "simd-json-derive-int"
version = "0.4.0"
authors = ["Heinz N. Gies <heinz@licenser.net>"]
edition = "2021"
license = "Apache-2.0/MIT"
description = "procmacros for simd-json-derive"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["visit", "extra-traits"] }
simd-json = { version = "0.6", features = ["allow-non-simd"] }

[features]
128bit = ["simd-json/128bit"]
