[package]
name = "simd-json-derive-int"
version = "0.15.0"
authors = ["Heinz N. Gies <heinz@licenser.net>"]
edition = "2021"
license = "Apache-2.0/MIT"
description = "procmacros for simd-json-derive"
documentation = "https://docs.rs/simd-json-derive-int"
repository = "https://github.com/simd-lite/simd-json-derive"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["visit", "extra-traits"] }
simd-json = { version = "0.14.0" }
thiserror = "2.0.0"


[features]
128bit = ["simd-json/128bit"]
